--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,15 @@
-.container {
-  padding: 0 2rem;
+.test {
+  background-color: #eee;
 }
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 1rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center; */
+  /* align-items: center; */
 }
 
 .footer {
