--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -1,2 +1,15 @@
-$mobile: 450px;
+$mobile: 550px;
 $tablet: 1150px;
+
+$color_primary: #07eda4;
+$color_secondary: rgb(58, 58, 58);
+$color_secondary_light: rgb(68, 68, 68);
+
+$color_font: #eee;
+
+$font-huge: 3rem;
+$font-large: 2.5rem;
+$font-medium: 2rem;
+$font-tiny: 1rem;
+
+$custom-font-large: 5rem;
