--- a/styles/scss/mobile.scss
+++ b/styles/scss/mobile.scss
@@ -1,5 +1,34 @@
 @media only screen and (max-width: $mobile) {
   .container {
-    padding: 0 2rem !important;
+    padding: 0 2rem;
+  }
+
+  #contact {
+    input, textarea {
+      width: 100%;
+    }
+
+    .project-item {
+      flex-direction: column;
+      max-height: none;
+      .image-container {
+        margin-bottom: 0.2em;
+        width: 100% !important;
+      }
+      .text-container {
+        margin: 0;
+        text-align: left;
+      }
+    }
+
+    .grid-box-2 {
+      max-width: 100%;
+      width: 100%;
+      margin: 0;
+    }
+
+    #message-box {
+      height: 18em;
+    }
   }
 }
