--- a/styles/scss/tablet.scss
+++ b/styles/scss/tablet.scss
@@ -1,5 +1,27 @@
 @media only screen and (min-width: $mobile) and (max-width: $tablet) {
   .container {
-    padding: 0 7rem !important;
+    padding: 0 7rem;
+  }
+
+  #contact {
+    input, textarea {
+      width: 100%;
+    }
+  }
+}
+
+@media only screen and (max-width: $tablet) {
+  #experience {
+    .project-item {
+      flex-direction: column;
+      max-height: none;
+      .image-container {
+        margin-bottom: 0.2em;
+      }
+      .text-container {
+        margin: 0;
+        text-align: left;
+      }
+    }
   }
 }
