--- a/styles/scss/globals.scss
+++ b/styles/scss/globals.scss
@@ -16,6 +16,14 @@ h1 {
   color: $color_primary;
 }
 
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: $font-tiny;
+}
+
 a {
   color: inherit;
   text-decoration: none;
