--- a/styles/scss/mobile.scss
+++ b/styles/scss/mobile.scss
@@ -28,7 +28,18 @@
     }
 
     #message-box {
-      height: 18em;
+      top: 3em;
+      left: 0;
     }
+  }
+
+  .section .decoration-text {
+    display: none;
+  }
+
+  #landing .decoration-text {
+    transform: none;
+    position: relative;
+    top: -10em;
   }
 }
