--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -7,6 +7,10 @@ $color_secondary_light: rgb(68, 68, 68);
 
 $color_font: #eee;
 
+$font-family-header: none;
+$font-family-paragraph: none;
+$font-family-decoration: none;
+
 $font-huge: 3rem;
 $font-large: 2.5rem;
 $font-medium: 2rem;
