Small visual tweaks | It's all about the small things

--- a/styles/compiled.scss
+++ b/styles/compiled.scss
@@ -1,5 +1,6 @@
 @import "./scss/variables";
 @import "./scss/custom.scss";
+@import "./scss/effects.scss";
 @import "./scss/globals.scss";
 @import "./scss/mobile.scss";
 @import "./scss/tablet.scss";
