Small visual tweaks 2 | It's all about the small things

--- a/styles/scss/mobile.scss
+++ b/styles/scss/mobile.scss
@@ -104,8 +104,8 @@
     }
 
     #socials a {
-      margin: 0;
-      padding: 1em 0.4em;
+      margin-left: 0.1rem;
+      padding: 0.3em 0.4em;
     }
   }
 }
