--- a/styles/scss/tablet.scss
+++ b/styles/scss/tablet.scss
@@ -7,6 +7,12 @@
     input, textarea {
       width: 100%;
     }
+
+    .grid-list-2 {
+      .grid-box-2 {
+        margin-top: 3em;
+      }
+    }
   }
 
   #experience {
