--- a/styles/scss/mobile.scss
+++ b/styles/scss/mobile.scss
@@ -76,10 +76,13 @@
       }
     }
 
+    #message-box {
+      max-height: 23em;
+    }
+
     .grid-box-2 {
       max-width: 100%;
       width: 100%;
-      margin: 0;
     }
 
     .grid-box {
@@ -92,6 +95,13 @@
       border-radius: .3em;
       p {
         margin-top: 0;
+      }
+    }
+
+    form {
+      margin-top: 3em;
+      p {
+        margin: 0;
       }
     }
   }
