--- a/styles/scss/custom.scss
+++ b/styles/scss/custom.scss
@@ -164,7 +164,8 @@ nav {
 
 /* ME */
 #me {
-  // min-height: 25em;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   .centered {
     padding-bottom: 1rem;
   }
