--- a/styles/scss/effects.scss
+++ b/styles/scss/effects.scss
@@ -7,3 +7,18 @@
 nav, footer {
   mix-blend-mode: difference;
 }
+
+.narrow-menu {
+  transition: opacity 450ms ease-in-out 1 elementAppears;
+}
+
+@keyframes elementAppears {
+  0% {
+    opacity: 0;
+    top: -3rem;
+  }
+  100% {
+    opacity: 1;
+    top: 0;
+  }
+}
