--- a/styles/scss/globals.scss
+++ b/styles/scss/globals.scss
@@ -220,6 +220,22 @@ button:active {
 
 #burger-button {
   display: none;
+  cursor: pointer;
+}
+
+.narrow-menu {
+  margin: 0;
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding-left: 0.65em;
+  padding-right: 0.65em;
+  a {
+    font-size: $font_size_small;
+    margin: 0;
+    padding-left: 0.5rem;
+  }
 }
 
 @media only screen and (min-width: $tablet) {
