--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "./overwrite-tailwind.css";
 
 :root {
 	--foreground-rgb: 0, 0, 0;
@@ -25,3 +26,27 @@
 	)
 	rgb(var(--background-start-rgb));
 } */
+
+nav, footer {
+	color: #fff;
+	mix-blend-mode: difference;
+}
+
+nav {
+    color: #000;
+}
+
+.narrow-menu {
+	transition: opacity 450ms ease-in-out 1 elementAppears;
+}
+
+@keyframes elementAppears {
+	0% {
+		opacity: 0;
+		top: -3rem;
+	}
+	100% {
+		opacity: 1;
+		top: 0;
+	}
+}
