--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "./overwrite-tailwind.css";
+@import "./custom.css";
 
 :root {
 	--foreground-rgb: 0, 0, 0;
@@ -32,8 +32,8 @@ nav, footer {
 	mix-blend-mode: difference;
 }
 
-nav {
-    color: #000;
+body {
+	background-color: #fff;
 }
 
 .narrow-menu {
