Updating to new nextjs release, base 6

--- a/src/app/custom.css
+++ b/src/app/custom.css
@@ -25,3 +25,8 @@ main #landing .name {
         font-size: 3rem;
     }
 }
+
+/* Image */
+.block-wrapper header img {
+    transform: translateY(-20%);
+}
